--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,12 @@
             android:configChanges="orientation|keyboardHidden">
         </activity>
         <activity
+            android:name=".view.ForgotPasswordActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
+        </activity>
+        <activity
             android:name=".view.WebViewActivity"
             android:label="@string/app_name">
         </activity>
