--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "uk.ac.imperial.icfootballfantasy"
+        applicationId "uk.ac.ic.union.icfootballfantasy"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
